// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fast load: 1.root 1`] = `
"<Suspense>
   <Fragment>
      <div>
         <Data/>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;

exports[`fast load: 2.Data 1`] = `
"<Data>
   data
</Data>"
`;

exports[`fast load: 3.Suspense result 1`] = `
"<Suspense>
   <Fragment>
      <div>
         <Data>
            data
         </Data>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;

exports[`slow load: 1.root 1`] = `
"<Suspense>
   <Fragment>
      <div>
         <Data/>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;

exports[`slow load: 2.Suspense with loading 1`] = `
"<Suspense>
   <Fragment>
      <div>
         Loading...
      </div>
      <div>
         <Data/>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;

exports[`slow load: 3.Data 1`] = `
"<Data>
   data
</Data>"
`;

exports[`slow load: 4.Suspense result 1`] = `
"<Suspense>
   <Fragment>
      <div>
         <Data>
            data
         </Data>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;

exports[`zero timeout: 1.root 1`] = `
"<Suspense>
   <Fragment>
      <div>
         <Data/>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;

exports[`zero timeout: 2.Suspense with loading 1`] = `
"<Suspense>
   <Fragment>
      <div>
         Loading...
      </div>
      <div>
         <Data/>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;

exports[`zero timeout: 3.Data 1`] = `
"<Data>
   data
</Data>"
`;

exports[`zero timeout: 4.Suspense result 1`] = `
"<Suspense>
   <Fragment>
      <div>
         <Data>
            data
         </Data>
         Hello
      </div>
   </Fragment>
</Suspense>"
`;
